<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.randomail.activities.EmailsActivity">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item android:id="@+id/menu"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/menu" app:showAsAction="always">
        <menu >
            <group android:id="@+id/action_group">
                <item
                    android:id="@+id/logout"
                    android:title="@string/logout"
                    app:showAsAction="collapseActionView"
                    android:orderInCategory="100"/>
            </group>
        </menu>
    </item>
</menu>
